--- a/profile.html
+++ b/profile.html
@@ -29,5 +29,11 @@
             <li style="float: right;"><a href="profile.html">Profile</a></li>
         </ul>
     </header>
+
+    <div class="commanDiv">
+        <b>Name:</b> Swati <br>
+        <b>Email:</b> Swati@gmail.com <br>
+        <b>Address:</b> Bhosari <br>
+    </div>
 </body>
 </html>
