--- a/profile.html
+++ b/profile.html
@@ -6,16 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Swati</title>
     <link rel="stylesheet" href="css/basic.css">
-    <style>
-        body {
-           
-           /* background: linear-gradient(90deg, rgb(142, 180, 200), rgba(0, 212, 255, 1)); */
-           background: rgba(0, 212, 255, 1);
-
-           height    : 100vh;
-           height    : auto;
-       }
-    </style>
+    
 </head>
 <body>
     <header>
@@ -29,8 +20,10 @@
             <li style="float: right;"><a href="profile.html">Profile</a></li>
         </ul>
     </header>
-
+    <br>
     <div class="commanDiv">
+        <img src="images/profile.png" alt="swati-pic">
+        <br>
         <b>Name:</b> Swati <br>
         <b>Email:</b> Swati@gmail.com <br>
         <b>Address:</b> Bhosari <br>
